fix: Correcion de reglas y variables de entorno github
