# dist/tools/swagger-output.json
@@ -174,33 +174,8 @@
       }
     },
     "/cursos": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "apply(this",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
       "post": {
         "description": "",
-        "parameters": [
-          {
-            "name": "apply(this",
-            "in": "header",
-            "type": "string"
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -208,13 +183,27 @@
           "201": {
             "description": "Created"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/cursos-free": {
+    "/cursos/free": {
       "get": {
         "description": "",
         "responses": {
